--- a/front/assets/style/less/colors.less
+++ b/front/assets/style/less/colors.less
@@ -1,11 +1,10 @@
-@dark-primary-color: #E64A19;
 @primary-color: #FF5722;
-@light-primary-color: #FFCCBC;
-@text-icon: #212121;
-@accent-color: #FFAB00;
-@dark-accent-color: #FFC400;
+@accent-color: #03A9F4;
+@warn-color: #FFAB00;
 
+@dark-primary-color: #E64A19;
+@light-primary-color: #FFCCBC;
 
 @primary-text: #212121;
-@secondary-text: #727272;
-@divider-color: #B6B6B6;
+@secondary-text: #757575;
+@divider-color: #BDBDBD;
