--- a/front/app/components/Signin/SigninView.html
+++ b/front/app/components/Signin/SigninView.html
@@ -1,41 +1,29 @@
 <div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-block">
-                <h4 class="card-title">Connexion</h4>
-                <hr>
-
-                <form>
-                    <!--First row-->
-                    <div class="row">
-                        <!--First column-->
-                        <div class="col-md-6">
-                            <div class="md-form">
-                                <i class="fa fa-envelope prefix"></i>
-                                <input type="email" id="form81" class="form-control validate">
-                                <label for="form81" data-error="wrong" data-success="right">Type your email</label>
-                            </div>
-                        </div>
-
-                        <!--Second column-->
-                        <div class="col-md-6">
-                            <div class="md-form">
-                                <i class="fa fa-lock prefix"></i>
-                                <input type="password" id="form82" class="form-control validate">
-                                <label for="form82" data-error="wrong" data-success="right">Type your
-                                    password</label>
-                            </div>
-                        </div>
+    <div class="col-md-4 pr-0">
+        <md-card class="pt-0 bg-primary-color mat-card height-content-card">
+            <div class="row h-100">
+                <div class="col-sm-12 my-auto text-center">
+                    <img src="../../../assets/img/pulpe-logo-white.png" width="25%">
+                    <div class="pt-2">
+                        <h2>Bienvenue</h2>
+                        <h2>Inscrivez-vous!</h2>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <div class="md-form form-group">
-                                <a href="" class="btn btn-primary btn-lg">Login</a>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
-        </div>
+        </md-card>
+    </div>
+
+    <div class="col-md-8 pl-0">
+        <md-card class="pt-0 white mat-card height-content-card">
+            <div class="col-md-12">
+                <h2 class="pt-1 text-primary">Inscription</h2>
+            </div>
+
+            <div class="row">
+                <div class="pb-2 mx-auto">
+                    <button class="bg-primary-color text-white" md-raised-button>S'inscrire</button>
+                </div>
+            </div>
+        </md-card>
     </div>
 </div>
