--- a/front/app/components/Signin/SigninView.html
+++ b/front/app/components/Signin/SigninView.html
@@ -15,15 +15,38 @@
 
     <div class="col-md-8 pl-0">
         <md-card class="pt-0 white mat-card height-content-card">
-            <div class="col-md-12">
+            <div class="col-md-12 pt-2">
                 <h2 class="pt-1 text-primary">Inscription</h2>
+            </div>
+            <div class="row pt-3">
+                <i class="col-2 col-form-label fa fa-2x fa-user prefix my-auto text-right"></i>
+                <div class="col-10">
+                    <md-input-container class="col-10">
+                        <input id="inputName" class="form-control" mdInput placeholder="Saisissez votre nom">
+                    </md-input-container>
+                </div>
+                <i class="col-2 col-form-label fa fa-2x fa-envelope prefix my-auto text-right"></i>
+                <div class="col-10">
+                    <md-input-container class="col-10">
+                        <input id="inputEmail" type="email" class="form-control" mdInput
+                               placeholder="Saisissez votre email">
+                    </md-input-container>
+                </div>
+                <i class="col-2 col-form-label fa fa-2x fa-lock prefix my-auto text-right"></i>
+                <div class="col-10">
+                    <md-input-container class="col-10">
+                        <input id="inputPassword" type="password" class="form-control" mdInput
+                               placeholder="Saisissez votre mot de passe">
+                    </md-input-container>
+                </div>
             </div>
 
             <div class="row">
-                <div class="pb-2 mx-auto">
-                    <button class="bg-primary-color text-white" md-raised-button>S'inscrire</button>
+                <div class="col-md-5 offset-7 bottom-right">
+                    <button type="button" class="btn btn-lg btn-primary text-white w-100">S'inscrire</button>
                 </div>
             </div>
+
         </md-card>
     </div>
 </div>
