--- a/front/src/assets/style/sizes.less
+++ b/front/src/assets/style/sizes.less
@@ -5,3 +5,27 @@
 .mb-6 {
   margin-bottom: 2.5rem !important
 }
+
+.mt-5 {
+  margin-top: 2rem !important
+}
+
+.mt-6 {
+  margin-top: 2.5rem !important
+}
+
+.mt-7 {
+  margin-top: 3rem !important
+}
+
+.mt-8 {
+  margin-top: 3.5rem !important
+}
+
+.mt-9 {
+  margin-top: 4rem !important
+}
+
+.mt-10 {
+  margin-top: 4.5rem !important
+}
