Component Profil Completation

--- a/front/src/app/profile-completation/profile-completation.component.html
+++ b/front/src/app/profile-completation/profile-completation.component.html
@@ -29,14 +29,6 @@
                         </div>
                     </div>
                     <div class="row pt-4">
-                        <md-input-container class="col-md-8 offset-md-2">
-                            <input id="inputDateOfBirth" type="date" class="form-control" mdInput
-                                   placeholder="Saisissez votre date de naissance">
-                        </md-input-container>
-                        <md-input-container class="col-md-8 offset-md-2">
-                            <input id="inputFrequency" type="number" class="form-control" mdInput
-                                   placeholder="Saisissez votre fréquence à votre salle de sport">
-                        </md-input-container>
                         <div class="col-md-8 offset-md-2">
                             <div class="row">
                                 <md-input-container class="col-md-5">
@@ -49,6 +41,14 @@
                                 </md-input-container>
                             </div>
                         </div>
+                        <md-input-container class="col-md-8 offset-md-2">
+                            <input id="inputDateOfBirth" type="date" class="form-control" mdInput
+                                   placeholder="Saisissez votre date de naissance">
+                        </md-input-container>
+                        <md-input-container class="col-md-8 offset-md-2">
+                            <input id="inputFrequency" type="number" class="form-control" mdInput
+                                   placeholder="Saisissez la fréquence à votre salle de sport">
+                        </md-input-container>
                     </div>
                 </md-card>
             </div>
