--- a/front/src/app/MenuBar/MenuBarView.html
+++ b/front/src/app/MenuBar/MenuBarView.html
@@ -5,7 +5,7 @@
     </button>
     <a class="navbar-brand text-primary pulpe-brand" href="#">Pulpe</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav mx-auto">
+        <div class="navbar-nav align-left">
             <a class="nav-item nav-link active" routerLinkActive="active" routerLink="/programme">Mon programme <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Mon évolution</a>
             <a class="nav-item nav-link" href="#">Mes séances</a>
