--- a/front/src/app/Signup/signup.component.css
+++ b/front/src/app/Signup/signup.component.css
@@ -1,8 +1,9 @@
 .height-content-card {
-  height: 25rem;
-}
+  height: 25rem; }
+
 .bottom-right {
   position: absolute;
   bottom: 24px;
-  right: 24px;
-}
+  right: 24px; }
+
+/*# sourceMappingURL=signup.component.css.map */
