--- a/front/src/assets/style/angular-material-custom.scss
+++ b/front/src/assets/style/angular-material-custom.scss
@@ -9,10 +9,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 $candy-app-primary: mat-palette($mat-deep-orange);
-$candy-app-accent:  mat-palette($mat-light-blue);
+$candy-app-accent:  mat-palette($mat-blue, A200);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-purple);
+$candy-app-warn:    mat-palette($mat-amber, A700);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
@@ -21,3 +21,12 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+
+.mat-input-underline {
+  position: initial;
+  height: 1px;
+  width: 100%;
+  margin-top: 4px;
+  border-top-width: 1px;
+  border-top-style: solid;
+}
