--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -1,27 +1,24 @@
-@import "colors";
-@import "sizes";
+@import "_colors";
+@import "_sizes";
+@import "_text";
 
 body {
   background-color: #eee;
-  color: @primary-text;
+  color: $primary-text;
   padding-top: 4.5rem;
 }
 
 .bg-primary-color {
-  background-color: @primary-color !important;
+  background-color: $primary-color !important;
   a {
     color: white !important;
   }
-  color: @light-primary-color !important;
+  color: $light-primary-color !important;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-  color: @secondary-text !important;
+  color: $secondary-text !important;
   cursor: pointer;
-}
-
-.text-light-weight {
-  font-weight: 100 !important;
 }
 
 .overflow-top {
@@ -46,22 +43,6 @@ body {
 
 .no-shadow {
   box-shadow: none !important;
-}
-
-.pb1 {
-  padding-bottom: 1rem !important;
-}
-
-.pb2 {
-  padding-bottom: 2rem !important;
-}
-
-.pb3 {
-  padding-bottom: 3rem !important;
-}
-
-.white-text {
-  color: white;
 }
 
 .white {
@@ -96,7 +77,7 @@ body {
       stroke-width: 3px !important;
     }
   }
-  p{
+  p {
     position: absolute;
     top: 38px;
     width: 100px;
@@ -104,13 +85,13 @@ body {
   }
 }
 
-.list-header{
+.list-header {
   margin: 0;
   padding: 0;
   font-weight: 400;
   font-size: inherit;
   /* color: eee; */
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, .54);
 }
 
 .vcenter {
@@ -119,31 +100,16 @@ body {
   float: none;
 }
 
-.pulpe-brand{
+.pulpe-brand {
   font-weight: 100;
   font-size: 2rem;
 }
+
 .navbar.center .navbar-inner {
   text-align: center;
 }
 
 .navbar.center .navbar-inner .nav {
-  display:inline-block;
+  display: inline-block;
   float: none;
-}
-
-/** FONTS AND TEXT RULES **/
-.typography-display-1, h2,
-.h2, .display-4 {
-  font-weight: 200;
-}
-
-/** OVERRIDE CLASSES ANGULAR MATERIAL 2 **/
-.mat-input-underline {
-  position: initial;
-  height: 1px;
-  width: 100%;
-  margin-top: 4px;
-  border-top-width: 1px;
-  border-top-style: solid;
 }
