Program section is updated

--- a/front/src/app/program/program.component.html
+++ b/front/src/app/program/program.component.html
@@ -1,22 +1,8 @@
-<!--<div class="jumbotron jumbotron goals">-->
-<!--<div class="container">-->
-<!--<h1 class="display-3 font-weight-light">Mon programme</h1>-->
-<!--<p class="ml-4 lead text-light-weight">Objectif : <span class="font-weight-light">{{goal}}</span> !</p>-->
-<!--<div class="col-md-12 text-right">-->
-<!--<a class="btn btn-secondary btn-sm"><i class="ion-ios-cog-outline display-4"></i></a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
 <div class="row">
     <div class="col-md-12">
         <h3 class="text-left text-black-primary text-w-300">
             Votre programme
         </h3>
-        <!--<h5 class="text-left text-primary text-light-weight">-->
-        <!--Ce programme dure <span class="text-accent">1h25</span> et vous-->
-        <!--l'avez effectué <span class="text-accent">33 fois</span>.-->
-        <!--</h5>-->
     </div>
 </div>
 <hr>
@@ -58,17 +44,6 @@
                 </div>
             </md-card>
         </div>
-        <!--<div class="col-md-3">-->
-        <!--<md-card class="mb-2 mb-md-0 p-2 h-100">-->
-        <!--<p class="text-right text-black-secondary mb-0 text-uppercase recap-title">Nutrition adapté</p>-->
-        <!--<div class="row">-->
-        <!--<div class="col-md-12 text-center">-->
-        <!--<i class="icon-recap ion-ios-timer-outline"></i>-->
-        <!--<p class="text-center mb-0">1H25</p>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</md-card>-->
-        <!--</div>-->
     </div>
 
     <div class="row">
@@ -89,96 +64,11 @@
 
                 <div class="row mb-2">
                     <div class="col-md-12">
-                        <p class="lead text-light-weight text-center mb-0">Répartition du programme</p>
+                        <p class="lead text-light-weight text-center mb-0">Répartition des exercices</p>
                     </div>
                     <hr class="w-100">
                 </div>
                 <div class="row">
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Échauffement</span>-->
-                    <!--</div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar h-100 bg-primary" role="progressbar" style="width: 15%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Abdominaux</span></div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar h-100 bg-primary" role="progressbar" style="width: 10%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--&lt;!&ndash;<span class="text-dark-primary">5%</span>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row">-->
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Musculation</span>-->
-                    <!--</div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar h-100 bg-primary" role="progressbar" style="width: 60%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--&lt;!&ndash;<span class="text-dark-primary">5%</span>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Étirements</span></div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar bg-primary h-100" role="progressbar" style="width: 5%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--&lt;!&ndash;<span class="text-dark-primary">5%</span>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row">-->
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Cardio</span></div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar bg-primary h-100" role="progressbar" style="width: 10%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--&lt;!&ndash;<span class="text-dark-primary">5%</span>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-md-6 col-12">-->
-                    <!--<div class="row mb-2">-->
-                    <!--<div class="col-5 col-md-6 col-lg-5"><span class="repartition-label">Récup</span></div>-->
-                    <!--<div class="col-7 col-md-6 col-lg-7">-->
-                    <!--<div class="progress h-100">-->
-                    <!--<div class="progress-bar bg-primary h-100" role="progressbar" style="width: 5%;"-->
-                    <!--aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">-->
-                    <!--&lt;!&ndash;<span class="text-dark-primary">5%</span>&ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-
                     <div class="w-100" style="max-height: 20vh;">
                         <canvas baseChart
                                 [datasets]="chartData"
@@ -201,103 +91,23 @@
     <div class="row">
         <div class="col-md-12">
             <md-tab-group>
-                <md-tab label="Échauffement">
+                <md-tab *ngFor="let exerciseGroupLabelDictionary of exerciseGroupLabelsDictionary"
+                        label="{{exerciseGroupLabelDictionary.label}}">
                     <md-card>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="row">
-                                    <div class="col-md-12">
-
-                                    </div>
-                                    <!--<div class="col-md-12">-->
-                                    <!--<h2 class="text-center text-light-weight text-primary">Mes exercices</h2>-->
-                                    <!--</div>-->
-                                    <!--<div class="dropdown-divider"></div>-->
-                                </div>
                                 <div class="row mt-4">
                                     <div class="col-md-12">
-                                        <!--<md-list>-->
-                                        <md-list-item *ngFor="let exercise of exercises; let last = last">
-                                            <div class="row" md-line>
-                                                <div class="col-md-1 col-12 text-center mr-md-1">
-                                                    <img src="../../assets/img/exercise-types/strength-64.png"
-                                                         class="rounded" alt="Type">
-                                                </div>
-
-                                                <div class="col-md-10">
-                                                    <!--<md-card class="exerciseTitle">-->
-                                                    <h4 class="exerciseTitle">{{exercise.name}}</h4>
-                                                    <!--</md-card>-->
-                                                </div>
-                                            </div>
-
-                                            <!--<h4 md-line class="exerciseTitle"> {{exercise.name}} </h4>-->
-                                            <div class="row exerciseDetails" md-line>
-                                                <div class="col-6 offset-md-2 offset-sm-0 col-md-2 text-center">
-
-                                                    <i class="ion ion-md-refresh"></i>
-                                                    <span>{{exercise.series}}</span>
-                                                    <!--<hr *ngIf="!last" class="white">-->
-                                                </div>
-                                                <div class="col-6 col-md-2 text-center">
-                                                    <span class="icon-fitness_center"></span>
-                                                    <span>{{exercise.repetitions}} </span>
-                                                    <!--<hr *ngIf="!last" class="white">-->
-                                                </div>
-                                                <div class="col-6 col-md-2 text-center">
-                                                    <i class="ion-ios-stopwatch-outline"></i>
-                                                    <span> {{exercise.relaxTime | number:'1.2-2'}} min </span>
-                                                    <!--<hr *ngIf="!last" class="white">-->
-                                                </div>
-                                                <div class="col-6 col-md-2 text-center">
-                                                    <i class="ion-ios-timer-outline"></i>
-
-                                                    <span>{{exercise.endRelaxTime | number:'1.2-2'}} min </span>
-                                                    <!--<hr *ngIf="!last" class="white">-->
-                                                </div>
-                                            </div>
+                                        <md-list-item
+                                                *ngFor="let exercise of program.exercises.get(exerciseGroupLabelDictionary.rawCode); let last = last">
+                                            <pulpe-exercise-preview [exercise]="exercise" [exerciseGroupRawCode]="exerciseGroupLabelDictionary.rawCode"></pulpe-exercise-preview>
                                             <hr *ngIf="!last" class="white">
-                                            <!--<div class="row">-->
-                                            <!--<div class="col-md-3">-->
-                                            <!--{{exercise.name}}-->
-                                            <!--</div>-->
-                                            <!--<div class="col-md-3">-->
-                                            <!--{{exercise.name}}-->
-                                            <!--</div>-->
-                                            <!--<div class="col-md-3">-->
-                                            <!--{{exercise.name}}-->
-                                            <!--</div>-->
-                                            <!--<div class="col-md-3">-->
-                                            <!--{{exercise.name}}-->
-                                            <!--</div>-->
-                                            <!--</div>-->
                                         </md-list-item>
-                                        <!--</md-list>-->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </md-card>
-                </md-tab>
-                <md-tab label="Musculation">
-                    <h1>Some more tab content</h1>
-                    <p>...</p>
-                </md-tab>
-                <md-tab label="Cardio">
-                    <h1>Some more tab content</h1>
-                    <p>...</p>
-                </md-tab>
-                <md-tab label="Abdominaux">
-                    <h1>Some more tab content</h1>
-                    <p>...</p>
-                </md-tab>
-                <md-tab label="Étirements">
-                    <h1>Some more tab content</h1>
-                    <p>...</p>
-                </md-tab>
-                <md-tab label="Récupération">
-                    <h1>Some more tab content</h1>
-                    <p>...</p>
                 </md-tab>
             </md-tab-group>
         </div>
