--- a/front/src/app/program/program.component.html
+++ b/front/src/app/program/program.component.html
@@ -25,7 +25,7 @@
                 <p class="text-right text-black-secondary mb-0 text-uppercase recap-title">Nombre de fois terminé</p>
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <i class="icon-recap ion ion-md-refresh"></i>
+                        <i class="icon-recap ion-ios-refresh-empty"></i>
                         <p class="text-center mb-0 recap-value">33x</p>
                         <!--<img src="../../assets/img/exercise-types/strength-64.png" alt="Type">-->
                     </div>
