--- a/front/src/assets/fonts/fitness-font/style.css
+++ b/front/src/assets/fonts/fitness-font/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?5pzi3u');
-  src:  url('fonts/icomoon.eot?5pzi3u#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?5pzi3u') format('truetype'),
-    url('fonts/icomoon.woff?5pzi3u') format('woff'),
-    url('fonts/icomoon.svg?5pzi3u#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2ianxu');
+  src:  url('fonts/icomoon.eot?2ianxu#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2ianxu') format('truetype'),
+    url('fonts/icomoon.woff?2ianxu') format('woff'),
+    url('fonts/icomoon.svg?2ianxu#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,7 +24,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-fitness_center:before {
+.icon-balance:before {
+  content: "\e903";
+}
+.icon-weight:before {
+  content: "\e902";
+}
+.icon-weight-o:before {
+  content: "\e901";
+}
+.icon-dumbbell:before {
+  content: "\e900";
+}
+.icon-althere:before {
   content: "\1f4aa";
 }
 
